acomplish layer1 and layer2

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "floraluo",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "gulp-sass": "^2.1.1"
   },
   "dependencies": {
     "gulp-bower-task": "^1.0.0"
